--- a/webroot/adm/salt.html
+++ b/webroot/adm/salt.html
@@ -1,82 +1,113 @@
 <html>
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
+  <meta charset="UTF-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="/js/main.js"></script>
+  <script type="module" src="/js/dangerModal.js"></script>
+  <script type="module" src="/js/operations.js"></script>
+  <script type="module" src="/js/output.js"></script>
+  <script type="module" src="/js/roleBadge.js"></script>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <h1>UID2 Env - Salt Management</h1>
 
 <a href="/">Back</a>
 
-<br>
-<br>
-
-<h3>Inputs</h3>
-
-<div>
-    <label for="fraction">Fraction:</label>
-    <input type="text" id="fraction" name="fraction" style="width: 120px;">
-    
-    <label for="targetDate" style="margin-left: 20px;">Target date:</label>
-    <input type="date" id="targetDate" name="targetDate">
+<div class="main-content">
+  <div class="operations-container"></div>
+  <div class="output-container"></div>
 </div>
 
-<div style="margin-top: 15px;">
-    <label for="minAges">Min ages (seconds):</label><br>
-    <input type="text" id="minAges" name="minAges" style="width: 100%; margin-top: 5px;">
-</div>
+<script type="module">
+import { initializeOperations } from '/js/operations.js';
+import { initializeOutput } from '/js/output.js';
 
-<br>
-<br>
+document.addEventListener('DOMContentLoaded', function () {
+  const tomorrow = new Date();
+  tomorrow.setDate(tomorrow.getDate() + 1);
+  const defaultTargetDate = tomorrow.getFullYear() + '-' +
+      String(tomorrow.getMonth() + 1).padStart(2, '0') + '-' +
+      String(tomorrow.getDate()).padStart(2, '0');
 
-<h3>Operations</h3>
+  const operationConfig = [
+    {
+      type: 'read-only',
+      title: 'Read Only Operations',
+      operations: [
+        {
+          id: 'doSnapshots',
+          title: 'List Salt Snapshots',
+          role: 'maintainer',
+          inputs: [],
+          apiCall: {
+            method: 'GET',
+            url: '/api/salt/snapshots'
+          }
+        },
+        {
+          id: 'doRotateZero',
+          title: 'Rotate Zero Salts',
+          role: 'maintainer',
+          inputs: [],
+          apiCall: {
+            method: 'POST',
+            url: '/api/salt/rotate-zero'
+          }
+        }
+      ]
+    },
+    {
+      type: 'danger-zone',
+      title: '☠️ Danger Zone ☠️',
+      operations: [
+        {
+          id: 'doRotate',
+          title: 'Rotate Second Level Salts',
+          role: 'superuser',
+          inputs: [
+            {
+              id: 'fraction-rotate',
+              name: 'fraction',
+              label: 'Fraction',
+              required: true,
+              defaultValue: (1/365).toFixed(6)
+            },
+            {
+              id: 'targetDate-rotate',
+              name: 'targetDate',
+              label: 'Target Date',
+              type: 'date',
+              required: true,
+              defaultValue: defaultTargetDate
+            },
+            {
+              id: 'minAges-rotate',
+              name: 'minAges',
+              label: 'Min Ages (seconds)',
+              required: true,
+              defaultValue: '2592000,5184000,7776000,10368000,12960000,15552000,18144000,20736000,23328000,25920000,28512000,31104000,33696000',
+              size: "multi-line"
+            }
+          ],
+          apiCall: {
+            method: 'POST',
+            getUrl: (inputs) => {
+              const minAges = encodeURIComponent(inputs.minAges);
+              const fraction = encodeURIComponent(inputs.fraction);
+              const targetDate = encodeURIComponent(inputs.targetDate);
+              return `/api/salt/rotate?min_ages_in_seconds=${minAges}&fraction=${fraction}&target_date=${targetDate}`;
+            }
+          }
+        }
+      ]
+    }
+  ];
 
-<ul>
-    <li class="ro-sem" style="display: none"><a href="#" id="doSnapshots">List Salt Snapshots</a></li>
-    <li class="ro-sem" style="display: none"><a href="#" id="doRotate">Rotate second level salts (SUPER_USER)</a></li>
-    <li class="ro-sem" style="display: none"><a href="#" id="doRotateZero">Rotate zero salts</a></li>
-</ul>
+  initializeOperations(operationConfig);
+  initializeOutput();
 
-<br>
-
-<h3>Output</h3>
-
-<div id="output">
-    <pre id="errorOutput"></pre>
-    <pre id="standardOutput"></pre>
-</div>
-
-<script language="JavaScript">
-    $(document).ready(function () {
-        const tomorrow = new Date();
-        tomorrow.setDate(tomorrow.getDate() + 1);
-
-        const defaultTargetDate = tomorrow.getFullYear() + '-' +
-            String(tomorrow.getMonth() + 1).padStart(2, '0') + '-' +
-            String(tomorrow.getDate()).padStart(2, '0');
-        $('#targetDate').val(defaultTargetDate);
-        $('#fraction').val((1/365).toFixed(6));
-
-        // 30 days, 60 days, 90 days... 390 days in seconds
-        $('#minAges').val('2592000,5184000,7776000,10368000,12960000,15552000,18144000,20736000,23328000,25920000,28512000,31104000,33696000');
-
-        $('#doSnapshots').on('click', function () {
-            doApiCall('GET', '/api/salt/snapshots', '#standardOutput', '#errorOutput');
-        });
-
-        $('#doRotate').on('click', function () {
-            const minAges = encodeURIComponent($('#minAges').val());
-            const fraction = encodeURIComponent($('#fraction').val());
-            const targetDate = encodeURIComponent($('#targetDate').val());
-            const url = '/api/salt/rotate?min_ages_in_seconds=' + minAges + '&fraction=' + fraction + '&target_date=' + targetDate;
-
-            doApiCall('POST', url, '#standardOutput', '#errorOutput');
-        });
-
-        $('#doRotateZero').on('click', function () {
-            doApiCall('POST', '/api/salt/rotate-zero', '#standardOutput', '#errorOutput');
-        });
-    });
+});
 </script>
 
 </body>
