--- a/webroot/adm/service.html
+++ b/webroot/adm/service.html
@@ -1,123 +1,234 @@
 <html>
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/js/main.js"></script>
+  <meta charset="UTF-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="/js/main.js"></script>
+  <script type="module" src="/js/dangerModal.js"></script>
+  <script type="module" src="/js/operations.js"></script>
+  <script type="module" src="/js/output.js"></script>
+  <script type="module" src="/js/roleBadge.js"></script>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <h1>UID2 Env - Service Management</h1>
 
 <a href="/">Back</a>
 
-<br>
-<br>
-
-<h3>Inputs</h3>
-
-<div>
-    <label for="serviceId">Service Id:</label>
-    <input type="text" id="serviceId" name="serviceId">
-    <label for="siteId">Site Id:</label>
-    <input type="text" id="siteId" name="siteId">
-    <label for="serviceName">Service Name:</label>
-    <input type="text" id="serviceName" name="serviceName">
-    <label for="roles">Roles:</label>
-    <input type="text" id="roles" name="roles">
+<div class="main-content">
+  <div class="operations-container"></div>
+  <div class="output-container"></div>
 </div>
 
-<br>
+<script type="module">
+import { initializeOperations } from '/js/operations.js';
+import { initializeOutput } from '/js/output.js';
 
-<h3>Operations</h3>
-
-<ul>
-    <li class="ro-cki" style="display: none"><a href="#" id="doListAll">List Services</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doListBySite">List Services By Site Id</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doListByServiceId">Get Service By Service Id</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doAdd">Add Service (PRIVILEGED)</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doUpdate">Update Service (PRIVILEGED)</a></li>
-</ul>
-
-<br>
-<h3>Low Level Operations - Do Not Use Unless Necessary</h3>
-
-<ul>
-    <li class="ro-cki" style="display: none"><a href="#" id="doDelete">Delete Service (SUPER_USER)</a></li>
-</ul>
-
-<h3>Output</h3>
-
-<div id="output">
-    <pre id="errorOutput"></pre>
-    <pre id="standardOutput"></pre>
-</div>
-
-<script language="JavaScript">
-    $(document).ready(function () {
-        $('#doListAll').on('click', function () {
-            doApiCall('GET', '/api/service/list', '#standardOutput', '#errorOutput');
-        });
-
-        $('#doListBySite').on('click', function () {
-            const siteId = parseInt($('#siteId').val())
-            if(!siteId) {
-                $('#errorOutput').text("required parameters: site_id")
-                return
+document.addEventListener('DOMContentLoaded', function () {
+  const operationConfig = [
+    {
+      type: 'read-only',
+      title: 'Read Only Operations',
+      operations: [
+        {
+          id: 'doListAll',
+          title: 'List All Services',
+          role: 'maintainer',
+          inputs: [],
+          apiCall: {
+            method: 'GET',
+            url: '/api/service/list'
+          }
+        },
+        {
+          id: 'doListBySite',
+          title: 'List Services By Site ID',
+          role: 'maintainer',
+          inputs: [
+            {
+              id: 'siteId-listBySite',
+              name: 'siteId',
+              label: 'Site ID',
+              required: true,
+              size: 1,
+              type: 'number'
             }
-            doApiCallWithCallback('GET', '/api/service/list', function (text) {
-                let resp = JSON.parse(text)
-                resp = resp.filter(obj => obj.site_id === siteId)
-                $('#standardOutput').text(JSON.stringify(resp, null, 2));
-            }, errorCallback);
-        });
-
-        $('#doListByServiceId').on('click', function () {
-            const serviceId = $('#serviceId').val()
-            if(!serviceId) {
-                $('#errorOutput').text("required parameters: service_id")
-                return
+          ],
+          apiCall: {
+            method: 'GET',
+            url: '/api/service/list'
+          },
+          postProcess: (response, inputs) => {
+            const siteId = parseInt(inputs.siteId);
+            return response.filter(service => service.site_id === siteId);
+          }
+        },
+        {
+          id: 'doListByServiceId',
+          title: 'Get Service By Service ID',
+          role: 'maintainer',
+          inputs: [
+            {
+              id: 'serviceId-get',
+              name: 'serviceId',
+              label: 'Service ID',
+              required: true,
+              size: 1,
+              type: 'number'
             }
-            doApiCall('GET', '/api/service/list/' + serviceId, '#standardOutput', '#errorOutput');
-        });
-
-        $('#doAdd').on('click', function () {
-            const siteId = parseInt($('#siteId').val())
-            const serviceName = $('#serviceName').val()
-            if(!siteId || !serviceName) {
-                $('#errorOutput').text("required parameters: site_id, name")
-                return
+          ],
+          apiCall: {
+            method: 'GET',
+            getUrl: (inputs) => `/api/service/list/${inputs.serviceId}`
+          }
+        }
+      ]
+    },
+    {
+      type: 'write',
+      title: 'Write Operations',
+      operations: [
+        {
+          id: 'doAdd',
+          title: 'Add Service',
+          role: 'elevated',
+          inputs: [
+            {
+              id: 'serviceName-add',
+              name: 'serviceName',
+              label: 'Service Name',
+              required: true,
+              size: 2
+            },
+            {
+              id: 'siteId-add',
+              name: 'siteId',
+              label: 'Site ID',
+              required: true,
+              size: 1,
+              type: 'number'
+            },
+            {
+              id: 'roles-add',
+              name: 'roles',
+              label: 'Roles',
+              required: true,
+              size: 'multi-line',
+              placeholder: 'Enter roles separated by commas'
             }
-
-            const roles = ($('#roles').val()).replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "");
-
-            doApiCall('POST', '/api/service/add', '#standardOutput', '#errorOutput', JSON.stringify({site_id: siteId, name: serviceName, roles: roles}));
-        });
-
-        $('#doUpdate').on('click', function () {
-            const serviceId = parseInt($('#serviceId').val())
-            if(!serviceId) {
-                $('#errorOutput').text("required parameters: service_id")
-                return
+          ],
+          preProcess: (inputs) => {
+            // Process roles from comma-separated string to array
+            const rolesArray = inputs.roles.replace(/\s+/g, '').split(',').filter(value => value !== '');
+            return {
+              ...inputs,
+              processedRoles: rolesArray
+            };
+          },
+          apiCall: {
+            method: 'POST',
+            url: '/api/service/add',
+            getPayload: (inputs) => ({
+              site_id: parseInt(inputs.siteId),
+              name: inputs.serviceName,
+              roles: inputs.processedRoles
+            })
+          }
+        },
+        {
+          id: 'doUpdate',
+          title: 'Update Service',
+          role: 'elevated',
+          inputs: [
+            {
+              id: 'serviceId-update',
+              name: 'serviceId',
+              label: 'Service ID',
+              required: true,
+              size: 1,
+              type: 'number'
+            },
+            {
+              id: 'serviceName-update',
+              name: 'serviceName',
+              label: 'Service Name',
+              required: false,
+              size: 2
+            },
+            {
+              id: 'siteId-update',
+              name: 'siteId',
+              label: 'Site ID',
+              required: false,
+              size: 1,
+              type: 'number'
+            },
+            {
+              id: 'roles-update',
+              name: 'roles',
+              label: 'Roles',
+              required: false,
+              size: 'multi-line',
+              placeholder: 'Enter roles separated by commas'
             }
-            const siteId = parseInt($('#siteId').val())
-            const serviceName = $('#serviceName').val()
-            const roles = ($('#roles').val()).replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "");
-
-            doApiCall('POST', '/api/service/update', '#standardOutput', '#errorOutput', JSON.stringify({service_id: serviceId, site_id: siteId, name: serviceName, roles: roles}));
-        });
-
-        $('#doDelete').on('click', function () {
-            if (!confirm("Are you sure?")) {
-                return;
+          ],
+          preProcess: (inputs) => {
+            // Process roles from comma-separated string to array (if provided)
+            const rolesArray = inputs.roles ? 
+              inputs.roles.replace(/\s+/g, '').split(',').filter(value => value !== '') : 
+              [];
+            return {
+              ...inputs,
+              processedRoles: rolesArray
+            };
+          },
+          apiCall: {
+            method: 'POST',
+            url: '/api/service/update',
+            getPayload: (inputs) => {
+              const payload = { service_id: parseInt(inputs.serviceId) };
+              if (inputs.serviceName) payload.name = inputs.serviceName;
+              if (inputs.siteId) payload.site_id = parseInt(inputs.siteId);
+              if (inputs.processedRoles.length > 0) payload.roles = inputs.processedRoles;
+              return payload;
             }
-
-            const serviceId = parseInt($('#serviceId').val())
-            if(!serviceId) {
-                $('#errorOutput').text("required parameters: service_id")
-                return
+          }
+        }
+      ]
+    },
+    {
+      type: 'danger-zone',
+      title: '☠️ Danger Zone ☠️',
+      operations: [
+        {
+          id: 'doDelete',
+          title: 'Delete Service',
+          role: 'superuser',
+          inputs: [
+            {
+              id: 'serviceId-delete',
+              name: 'serviceId',
+              label: 'Service ID',
+              required: true,
+              size: 1,
+              type: 'number'
             }
+          ],
+          description: 'This will permanently delete the service. This action cannot be undone and may affect related configurations.',
+          apiCall: {
+            method: 'POST',
+            url: '/api/service/delete',
+            getPayload: (inputs) => ({
+              service_id: parseInt(inputs.serviceId)
+            })
+          }
+        }
+      ]
+    }
+  ];
 
-            doApiCall('POST', '/api/service/delete', '#standardOutput', '#errorOutput', JSON.stringify({service_id: serviceId}));
-        });
-    });
+  initializeOperations(operationConfig);
+  initializeOutput();
+});
 </script>
 
 </body>
