--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="/js/main.js"></script>
 </head>
